k8s/deployment.yaml
apiVersion: apps/v1
# Сущность деплоймент
kind: Deployment
metadata:
  name: cats-api  # название деплоймента
  # Лучше добавлять метки всегда
  labels:
    app: cats-api
spec:
  replicas: 3 # количество экземпляров реплик
  # С какими подами наш деплоймент будет работать
  selector:
    matchLabels:
      app: cats-api # по какой метке матчить
  # описываем поды
  template:
    metadata:
      labels:
        app: cats-api # с какой меткой запустить наше приложение
    # Спецификация самого пода
    spec:
      containers:
        - name: cats-api-container  # имя контейнера
          image: glebshishkin68/cats-api:1.0.0
          ports:
            - containerPort: 8081 # внешний порт контейнера
